# rand_api

./: Cargo.toml
src/: evaluate.rs  lib.rs  main.rs
src/dice/: advantage.rs  atom.rs  keepdrop.rs  mod.rs  roll_modifier.rs
src/parse/: mod.rs  parse_coin_flip.rs  parse_dice_roll.rs  parse_expression.rs  parse_numbers.rs  parse_ranges.rs  parse_whitespace.rs
