[package]
name = "rand_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
rand = "0.8.5"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.5.13", features = ["http2"] }
